[gd_scene load_steps=12 format=3 uid="uid://dnv06oshbef4w"]

[ext_resource type="Script" uid="uid://dy0rmhk6dj8ie" path="res://Scripts/Moving_Main.gd" id="1_p456p"]
[ext_resource type="Texture2D" uid="uid://rk7yxwmwofek" path="res://Assets/Main_menu_BG.png" id="2_6k4qj"]
[ext_resource type="Texture2D" uid="uid://dj3u2vd4uu75u" path="res://Assets/Main_menu_Cookie.png" id="3_15kcp"]
[ext_resource type="Script" uid="uid://b7llbb1lxtfng" path="res://Scripts/Main_menu.gd" id="4_aueo0"]
[ext_resource type="Theme" uid="uid://b7q7d172o1ecr" path="res://Themes/main.tres" id="5_a5utg"]
[ext_resource type="Script" uid="uid://c3jij3djb4ukl" path="res://Scene/play_n_load.gd" id="6_wdu72"]
[ext_resource type="AudioStream" uid="uid://c6wbv28l3juwj" path="res://Audiowide/DEATHOFCOOKIE5.mp3" id="7_g3ywj"]
[ext_resource type="Script" uid="uid://o0k06lka758a" path="res://Scene/audio_volume.gd" id="8_tjhrw"]

[sub_resource type="Curve" id="Curve_p3x8m"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.025641, 0.520311), 0.0, 0.0, 0, 0, Vector2(0.864469, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_58ae2"]
curve = SubResource("Curve_p3x8m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lbm0s"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(320, 320, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
radial_velocity_min = -10.0
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, -5, 0)
scale_min = 15.41
scale_max = 27.4
color = Color(0.447839, 0.11488, 9.62615e-08, 1)
alpha_curve = SubResource("CurveTexture_58ae2")
hue_variation_min = -0.03
hue_variation_max = 0.03
turbulence_initial_displacement_min = -4.0
turbulence_initial_displacement_max = -4.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p456p")

[node name="Control" type="Control" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="Control"]
z_index = -5
position = Vector2(320, 180)
amount = 64
lifetime = 10.0
explosiveness = 0.1
process_material = SubResource("ParticleProcessMaterial_lbm0s")

[node name="ColorRect" type="ColorRect" parent="Control"]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -36.0
offset_right = -64.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
mouse_filter = 2
color = Color(0.921569, 0.505882, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Control"]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -36.0
offset_right = -64.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
mouse_filter = 2
texture = ExtResource("2_6k4qj")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = 8
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 765.0
offset_top = -21.0
offset_right = 765.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_15kcp")
expand_mode = 1
script = ExtResource("4_aueo0")

[node name="Audio" type="VSlider" parent="TextureRect2"]
z_index = 30
layout_mode = 0
offset_left = 582.0
offset_top = 106.0
offset_right = 598.0
offset_bottom = 306.0
theme = ExtResource("5_a5utg")
max_value = 1.0
step = 0.1
value = 0.3
tick_count = 11
ticks_on_borders = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -6.5
offset_right = 12.0
offset_bottom = 6.5
grow_vertical = 2
theme = ExtResource("5_a5utg")
alignment = 1
script = ExtResource("6_wdu72")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "-- WORLD SETTINGS --"
horizontal_alignment = 1

[node name="Width" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Width"]
layout_mode = 2
text = "Width"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Width"]
layout_mode = 2
theme = ExtResource("5_a5utg")
min_value = 50.0
max_value = 10000.0
step = 50.0
value = 100.0

[node name="Height" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Height"]
layout_mode = 2
text = "Height"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Height"]
layout_mode = 2
theme = ExtResource("5_a5utg")
min_value = 25.0
max_value = 500.0
step = 25.0
value = 50.0

[node name="Borders" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Borders"]
layout_mode = 2
text = "Border size"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Borders"]
layout_mode = 2
theme = ExtResource("5_a5utg")
max_value = 200.0
step = 5.0
value = 30.0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "-- GROUND SETTINGS --"
horizontal_alignment = 1

[node name="Diviation" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Diviation"]
layout_mode = 2
text = "Terrain deviation"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Diviation"]
layout_mode = 2
theme = ExtResource("5_a5utg")
max_value = 1000.0
step = 50.0
value = 100.0

[node name="Transition" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Transition"]
layout_mode = 2
text = "Terrain transition	"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Transition"]
layout_mode = 2
theme = ExtResource("5_a5utg")
min_value = 1.0
value = 10.0

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "-- SPIKE SETTINGS --"
horizontal_alignment = 1

[node name="SpikeChance" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/SpikeChance"]
layout_mode = 2
text = "Spike chance"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/SpikeChance"]
layout_mode = 2
theme = ExtResource("5_a5utg")
value = 5.0

[node name="Fastload" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Fast load (no rendering)"
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "--- !!! COOK !!! ---"

[node name="Deathofcookie5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_g3ywj")
script = ExtResource("8_tjhrw")

[connection signal="value_changed" from="TextureRect2/Audio" to="TextureRect2" method="_on_audio_value_changed"]
[connection signal="button_up" from="VBoxContainer/Play" to="VBoxContainer" method="_on_play_button_up"]
